Implement user dao with pg db
