# src/Controllers/userController.ts
@@ -25,6 +25,11 @@ export default class UserController {
         let result = await userService.getUserDataByUserId(id);
         res.status(result.statusCode).json(result);
     }
+    public async getUsersByUserIds(req: Request, res: Response): Promise<void> {
+        const { ids } = req.body;
+        let result = await userService.getUsersByUserIds(ids);
+        res.status(result.statusCode).json(result);
+    }
     public async updateUserPassword(req: Request, res: Response): Promise<void> {
         const id = req.params.id;
         const { newPassword } = req.body;
